m4_define(pcre2_major, [10])
m4_define(pcre2_minor, [35])
m4_define(pcre2_prerelease, [])
m4_define(pcre2_date, [2020-05-09])

# Libtool shared library interface versions (current:revision:age)
m4_define(libpcre2_8_version,     [10:0:10])
m4_define(libpcre2_16_version,    [10:0:10])
m4_define(libpcre2_32_version,    [10:0:10])
m4_define(libpcre2_posix_version, [2:3:0])

# NOTE: The CMakeLists.txt file searches for the above variables in the first
# 50 lines of this file. Please update that if the variables above are moved.
