[package]
name = "fish-printf"
edition.workspace = true
rust-version.workspace = true
version = "0.2.1"
repository.workspace = true
description = "printf implementation, based on musl"
license = "MIT"

[dependencies]
libc = "0.2.155"
widestring = { version = "1.0.2", optional = true }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[lints]
workspace = true
