[package]
name = "fish-common"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
repository.workspace = true
license.workspace = true

[dependencies]
bitflags.workspace = true
fish-widestring.workspace = true
libc.workspace = true
nix.workspace = true

[build-dependencies]
fish-build-helper.workspace = true
rsconf.workspace = true

[lints]
workspace = true
