[package]
name = "fish-fluent-check"
edition.workspace = true
rust-version.workspace = true
version = "0.0.0"
repository.workspace = true

[dependencies]
fish-build-helper.workspace = true
fluent.workspace = true
fluent-syntax.workspace = true
tempfile.workspace = true
unic-langid.workspace = true

[lints]
workspace = true
